<resources>
    <string name="additional_notes">Additional Notes</string>
    <string name="already_exists">Same name already exists</string>
    <string name="app_name">Study Assistant</string>
    <string name="app_name_launcher">My Studies</string>
    <string name="blank_input">Cannot be empty</string>
    <string name="cancel">Cancel</string>
    <string name="card">Card %1$d/%2$d</string>
    <string name="channel_description">Notification Channel for Event Reminders</string>
    <string name="channel_name">Event Reminders</string>
    <string name="class_test">Class Test</string>
    <string name="clear_filter">Clear Filters</string>
    <string name="completed">Completed</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="content_description_btn_calendar">Add to Calendar Button</string>
    <string name="content_description_btn_close">Close Button</string>
    <string name="content_description_btn_edit">Edit Button</string>
    <string name="content_description_btn_new">New Button</string>
    <string name="content_description_event_type">Event Type</string>
    <string name="content_description_reminder">Event Type</string>
    <string name="coursework">Coursework Assignment</string>
    <string name="date">Due Date</string>
    <string name="date_and_time">%1$s, %2$s</string>
    <string name="delete">Delete</string>
    <string name="delete_event">Are you sure you want to delete this event?</string>
    <string name="delete_lecture">Are you sure you want to delete this lecture file?</string>
    <string name="delete_set">Are you sure you want to delete this flash card set?</string>
    <string name="deleted">Deleted</string>
    <string name="disabled_shortcut">Shortcut Disabled</string>
    <string name="edit_event">Edit Event</string>
    <string name="empty_flash_cards">There are no flash card sets! Press the button on the bottom right to get started.</string>
    <string name="empty_lectures">No lecture files added! Press the button on the bottom right to retrieve one from your files.</string>
    <string name="empty_schedule">You have no events! Press the button on the bottom right to add a new one.</string>
    <string name="empty_widget">No Events to Display</string>
    <string name="error_calendar_app">No calendar app installed</string>
    <string name="error_characters">Invalid characters entered</string>
    <string name="error_file_added">File has already been added</string>
    <string name="error_file_app">No file browser app installed</string>
    <string name="error_inaccessible_file">"Error: File location may not be accessible"</string>
    <string name="error_invalid_file">Error: Not a PDF file</string>
    <string name="error_out_of_bounds">That card number does not exist</string>
    <string name="error_pdf_app">Error: No PDF reader app installed</string>
    <string name="error_reminder_time">Reminder time cannot be after the event</string>
    <string name="error_reminder_time_past">Reminder time cannot be in the past</string>
    <string name="event_complete">Event Is Completed</string>
    <string name="event_status">Event Status</string>
    <string name="event_type">Event Type</string>
    <string name="exam">Exam</string>
    <string name="file_provider_authority" translatable="false">com.rafhaanshah.studyassistant.utils.GenericFileProvider</string>
    <string name="fill_notification">Please fill in the reminder options</string>
    <string name="filter">Filter</string>
    <string name="go_to_card">Go To Card Number:</string>
    <string name="hint_card">Enter some text for this card</string>
    <string name="hint_edit_card">Click the edit button to edit this card</string>
    <string name="homework">Homework</string>
    <string name="incomplete">Incomplete</string>
    <string name="mark_completed">Mark as Completed</string>
    <string name="mark_incomplete">Mark as Incomplete</string>
    <string name="max_cards">Maximum number of cards for this set reached</string>
    <string name="mb">%1$s MB</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_flash_cards">My Flash Cards</string>
    <string name="menu_history">My History</string>
    <string name="menu_lectures">My Lectures</string>
    <string name="menu_schedule">My Schedule</string>
    <string name="menu_sort">Sort</string>
    <string name="navigation_cards">Flash Cards</string>
    <string name="navigation_lectures">Lectures</string>
    <string name="navigation_schedule">Schedule</string>
    <string name="new_event">New Event</string>
    <string name="new_flash">New Flash Card Set</string>
    <string name="no">No</string>
    <string name="no_reminder">No Reminder Set</string>
    <string name="notes">Notes</string>
    <string name="notification_date">Notification Date</string>
    <string name="notification_switch">Set Reminder</string>
    <string name="notification_time">Notification Time</string>
    <string name="pdf_select">Select a PDF file</string>
    <string name="pick_date_time">Pick Date and Time</string>
    <string name="rename">Rename</string>
    <string name="rename_file">Rename File</string>
    <string name="rename_flash_card_set">Rename Flash Card Set</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="sort_date">Sorting by added date</string>
    <string name="sort_size">Sorting by file size</string>
    <string name="sort_title">Sorting by title</string>
    <string name="time">Due Time</string>
    <string name="title">Title</string>
    <string name="undo_complete">Undo Complete</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
</resources>
