...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.rafhaanshah.studyassistant.schedule.ScheduleItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.Toolbar"
        app:title="@string/edit_event" />
...
                android:layout_marginBottom="-10dp"
                android:layout_marginStart="5dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_text_format_black_24dp"
                android:inputType="textCapWords"
...
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/pick_date_time"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:cursorVisible="false"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
...
                android:hint="@string/date"
                android:inputType="datetime"
                android:minWidth="200dp"
                android:onClick="pickDate" />

            <EditText
                android:id="@+id/et_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:cursorVisible="false"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
...
                    android:layout_toEndOf="@id/switch_notification"
                    android:background="@drawable/ic_notifications_black_24dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_delete_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/materialRed"
...
