<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_btn_close"
            android:paddingBottom="20dp"
            android:src="@drawable/ic_close_white_24dp" />

        <ImageButton
            android:id="@+id/btn_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:layout_toStartOf="@id/btn_edit"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_btn_edit"
            android:paddingBottom="20dp"
            android:src="@drawable/ic_today_white_24dp" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_btn_edit"
            android:paddingBottom="20dp"
            android:src="@drawable/ic_edit_white_24dp" />

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:maxLines="3"
            android:textColor="@color/textWhite"
            android:textSize="26sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:textColor="@color/textGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_event_type"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_access_time_white_24dp"
            android:textColor="@color/textGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_event_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_event_date"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_highlight_off_white_24dp"
            android:text="@string/incomplete"
            android:textColor="@color/textGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_event_reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_event_status"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_notifications_white_24dp"
            android:textColor="@color/textGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_event_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_event_reminder_date"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_sort_white_24dp"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:textColor="@color/textGrey"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
